secretul-succesului: Complete slides

--- a/secretul-succesului/secretul-succesului.tex
+++ b/secretul-succesului/secretul-succesului.tex
@@ -1,4 +1,4 @@
-\documentclass{beamer}
+\documentclass[handout]{beamer}
 
 % Romanian Language support
 \usepackage{ucs}
@@ -11,7 +11,7 @@
 \usepackage{underscore} % underscores need not be escaped
 \usepackage{booktabs}   % nice looking tables
 \usepackage{array}      % column size options in tables
-\usepackage[normalem]{ulem}       % for striketrough text
+% \usepackage[normalem]{ulem}       % for striketrough text
 
 \mode<presentation>
 %{ \usetheme{Berlin} }
@@ -23,23 +23,111 @@
 \institute{InfoEducație 2018 (Gălăciuc, Vrancea)}
 \author[Răzvan Deaconescu]{Răzvan Deaconescu \\
 razvan.deaconescu@cs.pub.ro}
-\date{3 august 2018}
+\date{1 august 2018}
 
 \begin{document}
 
 \frame{\titlepage}
 
-%\begin{frame}{Să vedem și să ascultăm}
-%  \centering
-%  World of Warcraft: Wrath of the Lich King trailer: \url{https://www.youtube.com/watch?v=BCr7y4SLhck}
-%\end{frame}
-%
-%\begin{frame}{Napoleon dixit}
-%  \centering
-%  \textit{A man does not have himself killed for a half-pence a day or for a petty distinction; you must speak to the soul in order to electrify him.}\\
-%  \vspace{3mm}
-%  \hfill \textit{Napoleon Bonaparte}
-%\end{frame}
+\begin{frame}{Ce înseamnă succesul?}
+  \centering
+  \Large{discuție}
+\end{frame}
+
+\begin{frame}{Ce înseamnă succes?}
+  \begin{itemize}
+    \pause \item succes \textbf{personal}: reușită
+    \pause \item succes \textbf{global}: succes, recunoaștere
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Abraham Lincoln}
+  \begin{itemize}
+    \pause \item născut în 1809
+    \pause \item președintele SUA: 1861 -- 1865
+    \pause \item 1832: candidează și iese 8/13 la alegeri pentru \textit{Illinois General Assembly}
+    \pause \item 1834: este ales în \textit{Illinois General Assembly}
+    \pause \item 1843: candidează la \textit{US House of Representatives}: este înfrânt
+    \pause \item 1846: candidează la \textit{US House of Representatives}: câștigă
+    \pause \item 1854: candidează pentru o poziție în \textit{US Senate}: nu câștigă
+    \pause \item 1858: candidează pentru o poziție în \textit{US Senate}: nu câștigă
+    \pause \item 1860: este ales candidat la prezidențiale din partea Partidului Republican, câștigă
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Margaret Roberts}
+  \begin{itemize}
+    \pause \item Margaret Thatcher, prim ministru al UK, 1979-1990
+    \pause \item născută în 1925
+    \pause \item 1950, 1951: candidează la alegeri parlamentare; pierde
+    \pause \item 1954: candidează pentru alegeri interne ale partidului Conservator; pierde
+    \pause \item 1955: nu candidează, are grijă de cei doi copii gemeni
+    \pause \item 1958: candidează; câștigă cu greu
+    \pause \item 1970: ministru al educației
+    \pause \item 1975: lider al opoziției
+    \pause \item 1979: prim ministru, prima femeie prim ministru al UK, primul șef de guvern femeie din Europa
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Steve Jobs}
+  \begin{itemize}
+    \pause \item născut în 1955
+    \pause \item CEO Apple Inc.
+    \pause \item 1976: fondează Apple cu Steve Wozniak
+    \pause \item 1 milion de dolar la 23 de ani
+    \pause \item 250 de milioane de dolari la 25 de ani
+    \pause \item 1985: e dat afară de la Apple (compania fondată)
+    \pause \item fondează Pixar și NeXT
+    \pause \item 1997: merge între NeXT și Apple
+    \pause \item reformează Apple
+    \pause \item 2018: Apple va deveni probabil prima companie cu peste 1000 miliarde dolari valoare
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{West Side Story: Steven Fulop}
+  \pause
+  \tiny{\url{https://romanialibera.ro/opinii/editorial/west-side-story-306887}}\\
+  \tiny{\url{https://romanialibera.ro/opinii/editorial/studiu-de-caz-real--cum-poate-cuceri-piata-universitatii-intreaga-tara-399007}}\\
+  \vspace{3mm}
+  \normalsize{\hfill \textit{Dan Turturică}}
+\end{frame}
+
+\begin{frame}{Steven Fulop}
+  \begin{itemize}
+    \pause \item primarul Jersey City, New Jersey
+    \pause \item anii 2000: Jersey City e un oraș cu multă lume bună, dar conducere politică coruptă
+    \pause \item 2004: candidează împotriva lui Bob Menendez pentru \textit{US Senate}: e bătut crunt
+    \pause \item 2005: câștigă un loc de consilier local în Jersey City, ceilalți 8 consilieri erau oamenii primarului
+    \pause \item 2009: multe arestări în anturajul primarului (corupție)
+    \pause \item 2009: recâștigă locul de consilier local
+    \pause \item 2013: candidează împotriva primarului; primarul primește \textit{endorsement} de la Barack Obama și de la Bob Menendez; câștigă cu 53\%-38\%
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Steven Fulop}
+  \pause \textit{,,Realitatea: şi alţi oameni trec prin aceleaşi încercări ca şi noi. Singura diferenţă care contează este că unii nu abandonează niciodată lupta şi reuşesc să găsească dozajul optim de idealism, inteligenţă şi pragmatism cu care îi pot pune la respect pe cei ce îi abuzează. Şi un detaliu de culoare: Steve Fulop este fiul unor emigranţi din România.''} \\
+  \pause \textit{,,Există revoluții care pot începe cu o baie de sânge, sau cu sute de mii de oameni ieșind disperați în stradă, sau cu o mână de idealiști lucizi, calmi, tenace, disciplinați, creativi, care atacă o problemă și ajung să schimbe din temelii întreg locul în care trăiesc.''}
+\end{frame}
+
+\begin{frame}{Care este secretul succesului?}
+  \centering
+  Vegeta Turns Super Sayian for the First Time: \url{https://www.youtube.com/watch?v=5trE1VD1GIo}
+\end{frame}
+
+\begin{frame}{Ingrediente pentru succes}
+  \centering
+  \pause educație \\
+  \pause anturaj \\
+  \pause curaj \\
+  \pause informare \\
+  \pause comunicare, feedback \\
+  \pause mentori
+\end{frame}
+
+\begin{frame}{Secretul succesului}
+  \centering
+  \pause \Large{perseverența}
+\end{frame}
 
 \begin{frame}{Breakthrough}
   \centering
@@ -48,57 +136,109 @@ razvan.deaconescu@cs.pub.ro}
   \tiny{\url{https://masculineepic.com/index.php/2018/02/04/breakthroughs-dont-come-gradually-but-after-long-stagnation/}}
 \end{frame}
 
-\begin{frame}{Painful Breakthrough}
+\begin{frame}{Perseverență}
   \centering
-  Vegeta Turns Super Sayian for the First Time: \url{https://www.youtube.com/watch?v=5trE1VD1GIo}
+  \textit{Overnight success is almost invariably preceded by years of invisible and unrewarded hard work.}\\
+  \vspace{2mm}
+  \textit{What about Zuckerberg? Spielberg?}\\
+  \vspace{2mm}
+  \textit{Spielberg directed a homemade feature film at 15, doing all his own special effects.}\\
+  \vspace{2mm}
+  \textit{Zuckerberg was building instant messaging programs at age 12.}\\
+  \vspace{3mm}
+  \tiny{\url{https://twitter.com/TheStoicEmperor/status/985091117321306113}}
 \end{frame}
 
-%
-%
-% https://twitter.com/TheStoicEmperor/status/985091117321306113
-%
-%Overnight success is almost invariably preceded by years of invisible and unrewarded hard work.
-%
-%What about Zuckerberg? Spielberg?
-%
-%Spielberg directed a homemade feature film at 15, doing all his own special effects.
-%
-%Zuckerberg was building instant messaging programs at age 12.
-%
-%
+\begin{frame}{Success and Failure}
+  \centering
+  \textit{Success consists of going from failure to failure without loss of enthusiasm.} \\
+  \vspace{3mm}
+  \hfill \textit{Winston Churchill}
+\end{frame}
 
-%\begin{frame}{Cuvinte}
-%  \pause
-%  \centering
-%  gri vs. sur vs. cenușiu\\
-%  \pause
-%  \begin{figure}
-%    \centering
-%    \includegraphics[width=0.4\textwidth]{img/dead-poets-society-lazy}
-%  \end{figure}
-%  \tiny
-%  \url{https://s-media-cache-ak0.pinimg.com/736x/6c/54/e6/6c54e6b4cd05585523d3ce5ae5a55574--robin-williams-writing-tips.jpg}
-%\end{frame}
+\begin{frame}{Stigmatizarea greșelii}
+  \begin{itemize}
+    \pause \item afectează negativ: reproș, închidere, temere
+    \pause \item toată lumea greșește
+    \pause \item în general din greșeli învățăm
+    \pause \item teama de eșec ne trage înapoi
+    \pause \item \textit{try, fail, try again, fail better}
+  \end{itemize}
+\end{frame}
 
-%\begin{frame}{Defectele ca armură}
-%  \centering
-%  \textit{Let me give you some advice bastard. Never forget what you are. The rest of the world will not. Wear it like armor, and it can never be used to hurt you.}\\
-%  \vspace{3mm}
-%  \hfill \textit{Tyrion Lannister (to Jon Snow)}
-%\end{frame}
+\begin{frame}{Nimic nu se întâmplă deodată}
+  \begin{itemize}
+    \pause \item it won't work (very well) the first time
+    \pause \item it's not easy
+    \pause \item it takes time
+    \pause \item it never ends
+  \end{itemize}
+\end{frame}
 
-%\begin{frame}{Resurse și recomandări}
-%  \begin{itemize}
-%    \item slide-urile prezentării: \url{https://www.slideshare.net/razvandeaconescu/cuvintele-au-putere}
-%    \item Daniel Pink: A Whole New Mind: Why Right-Brainers Will Rule the Future
-%    \item Daniel Pink: To Sell Is Human: The Surprising Truth About Moving Others
-%    \item Robert Cialdini: Influence: The Psychology of Persuasion
-%    \item Joe Navarro: What Every Body Is Saying
-%    \item Baltasar Gracian y Morales: The Art of Worldly Wisdom
-%    \item Mike Cernovich: Gorilla Mindset
-%    \item film: Dead Poets Society (1989)
-%    \item Charisma on Command: \url{https://www.youtube.com/user/charismaoncommand}
-%  \end{itemize}
-%\end{frame}
+\begin{frame}{Ce \textbf{nu} înseamnă perseverența}
+  \pause
+  \centering
+  \textit{Insanity: doing the same thing over and over again and expecting different results.} \\
+  \vspace{3mm}
+  \hfill \textit{Winston Churchill}
+\end{frame}
+
+\begin{frame}{Success Breeds Success}
+  \begin{itemize}
+    \pause \item resurse
+    \pause \item conexiuni
+    \pause \item echipă
+    \pause \item experiență
+    \pause \item mindset
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Reversul succesului}
+  \begin{itemize}
+    \pause \item \textit{If you can't handle stress, you can't handle success.}
+    \pause \item ai creat așteptări
+    \pause \item efort foarte mare
+    \pause \item mulți oameni depind de tine
+    \pause \item ești model, că vrei ca nu vrei
+    \pause \item presiune din interior și din exterior
+    \pause \item \textit{it's lonely at the top}
+    \pause \item greu de ținut echilibru: Demi Lovato, Steve Jobs, Tony Curtis
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Și dacă vreau succes, ce fac?}
+  \begin{itemize}
+    \pause \item \textbf{perseverență}
+    \pause \item muncește din greu
+    \pause \item gândește pe termen lung, \textit{festina lente}
+    \pause \item citește, prezintă, discută, dezbate
+    \pause \item stai și înconjoară-te de oamenii potriviți
+    \pause \item \textit{try, fail, try again, fail better, rinse and repeat}
+    \pause \item \textit{don't brag, be cool}
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Oamenii}
+  \begin{itemize}
+    \pause \item negativiștii (reproșuri)
+    \pause \item pozitiviștii (unicorni)
+    \pause \item constructiviștii (mentori)
+    \pause \item autoritarii (,,militari'')
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{În plus \ldots}
+  \pause \Large{It's more about the journey than the destination.} \\
+  \pause \Large{Enjoy the ride.} \\
+  \pause \Large{Thrill of the hunt.} \\
+\end{frame}
+
+\begin{frame}{Resurse și recomandări}
+  \begin{itemize}
+    \item slide-urile prezentării: \url{https://www.slideshare.net/razvandeaconescu/}
+    \item Marcus Aurelius: Meditations
+    \item cărți de istorie
+  \end{itemize}
+\end{frame}
 
 \end{document}
