--- a/foss-upb/slides.tex
+++ b/foss-upb/slides.tex
@@ -1,4 +1,4 @@
-\documentclass{paper}
+\documentclass{simple}
 
 \title[FOSS @CSE]{Free/Open Source Software in the Computer Science and
 Engineering Department (UPB)}
