--- a/lab-maintenance/slides.tex
+++ b/lab-maintenance/slides.tex
@@ -1,19 +1,4 @@
-\documentclass{beamer}
-
-\usepackage[utf8x]{inputenc}
-\usepackage[romanian]{babel}
-\usepackage{color}
-\usepackage{alltt}
-
-%\usepackage{code/highlight}
-
-\usepackage{hyperref}
-\usepackage{verbatim}
-
-\mode<presentation>
-{ \usetheme{Berlin} }
-
-\PrerenderUnicode{aâîțșĂÎÂȚȘ}
+\documentclass{simple}
 
 \title[Gestiunea laboratorului]{Soluții open-source pentru gestiunea sălilor
 de laborator}
