--- a/low-level-upb/slides.tex
+++ b/low-level-upb/slides.tex
@@ -1,19 +1,4 @@
-\documentclass{beamer}
-
-\usepackage[utf8x]{inputenc}
-\usepackage[english,romanian]{babel}
-\PrerenderUnicode{aâîțșĂÎÂȚȘ}
-\usepackage{color}
-\usepackage{alltt}
-
-\usepackage{hyperref}
-\usepackage{verbatim}
-
-\setbeamertemplate{navigation symbols}{}
-
-\mode<presentation>
-{ \usetheme{Rochester} }
-
+\documentclass{simple}
 
 \title[Low-level/Hacking @UPB]{Low-level/Kernel Development and Hacking at
 UPB}
@@ -24,8 +9,6 @@ UPB}
 \date{February 24, 2015}
 
 \begin{document}
-
-\setbeamertemplate{footline}[frame number]
 
 \begin{frame}{Disclaimer}
   \begin{center}
