--- a/org-mode/slides.tex
+++ b/org-mode/slides.tex
@@ -1,22 +1,6 @@
-% vim: set tw=78 tabstop=4 shiftwidth=4 aw ai:
-\documentclass{beamer}
+\documentclass{simple}
 
-\usepackage[utf8x]{inputenc}		% diacritice
-\usepackage[romanian]{babel}
-\usepackage{color}			% highlight
-\usepackage{alltt}			% highlight
-
-\usepackage{hyperref}			% folosiți \url{http://...}
-					% sau \href{http://...}{Nume Link}
-\usepackage{verbatim}
-
-\usepackage{code/highlight} % highlight
-
-\mode<presentation>
-{ \usetheme{Berlin} }
-
-% Încărcăm simbolurilor Unicode românești în titlu și primele pagini
-\PreloadUnicodePage{200}
+\usepackage{code/highlight}
 
 \title[Org-Mode]{Org-Mode: Your Life in Plain Text}
 \subtitle{Lightning Talk}
@@ -26,9 +10,6 @@
 \date{14 aprilie 2011}
 
 \begin{document}
-
-% Slide-urile cu mai multe părți sunt marcate cu textul (cont.)
-\setbeamertemplate{frametitle continuation}[from second]
 
 \frame{\titlepage}
 
