--- a/cse-tools/slides.tex
+++ b/cse-tools/slides.tex
@@ -1,24 +1,4 @@
-% vim: set tw=78 tabstop=4 shiftwidth=4 aw ai:
-\documentclass{beamer}
-
-\usepackage[utf8x]{inputenc}		% diacritice
-\usepackage[romanian]{babel}
-\usepackage{color}			% highlight
-\usepackage{alltt}			% highlight
-
-% highlight; comment this out in case you don't input code source files
-%\usepackage{code/highlight}		% highlight
-
-\usepackage{hyperref}			% folosiți \url{http://...}
-					% sau \href{http://...}{Nume Link}
-\usepackage{verbatim}
-
-\mode<presentation>
-{ \usetheme{Berlin} }
-
-% Încărcăm simbolurilor Unicode românești în titlu și primele pagini
-% Încărcăm simbolurilor Unicode românești în titlu și primele pagini.
-\PrerenderUnicode{aâîțșĂÎÂȚȘ}
+\documentclass{simple}
 
 \title[CSE Tools]{Catedra de Calculatoare -- Resurse electronice}
 \subtitle{Wiki, Redmine, Mail, Calendar}
@@ -28,9 +8,6 @@
 \date{6 octombrie 2011}
 
 \begin{document}
-
-% Slide-urile cu mai multe părți sunt marcate cu textul (cont.)
-\setbeamertemplate{frametitle continuation}[from second]
 
 \frame{\titlepage}
 
