--- a/cuvintele-au-putere/slides.tex
+++ b/cuvintele-au-putere/slides.tex
@@ -1,23 +1,4 @@
-\documentclass{beamer}
-
-% Romanian Language support
-\usepackage{ucs}
-\usepackage[utf8x]{inputenc}
-\PrerenderUnicode{aâîțșĂÎÂȚȘ}
-\usepackage[english,romanian]{babel}
-
-\usepackage{hyperref}   % use \url{http://$URL} or \href{http://$URL}{Name}
-\usepackage{verbatim}
-\usepackage{underscore} % underscores need not be escaped
-\usepackage{booktabs}   % nice looking tables
-\usepackage{array}      % column size options in tables
-\usepackage[normalem]{ulem}       % for striketrough text
-
-\mode<presentation>
-%{ \usetheme{Berlin} }
-
-% Disable useless navigation symbols.
-\setbeamertemplate{navigation symbols}{}
+\documentclass{simple}
 
 \title[Cuvintele au putere]{Cuvintele au putere}
 \institute{InfoEducație 2017 (Gălăciuc, Vrancea)}
