--- a/ios-hacking/slides.tex
+++ b/ios-hacking/slides.tex
@@ -1,24 +1,4 @@
-\documentclass{beamer}
-
-% Romanian Language support
-\usepackage{ucs}
-\usepackage[utf8x]{inputenc}
-\PrerenderUnicode{aâîțșĂÎÂȚȘ}
-\usepackage[english,romanian]{babel}
-
-\usepackage{hyperref}   % use \url{http://$URL} or \href{http://$URL}{Name}
-\usepackage{verbatim}
-\usepackage{underscore} % underscores need not be escaped
-\usepackage{booktabs}   % nice looking tables
-\usepackage{array}      % column size options in tables
-\usepackage[normalem]{ulem}       % for striketrough text
-
-\mode<presentation>
-%{ \usetheme{Berlin} }
-
-% Disable useless navigation symbols.
-\setbeamertemplate{navigation symbols}{}
-\setbeamertemplate{footline}[frame number]
+\documentclass{simple}
 
 \title[Dig into iOS]{Dig into iOS Without Using an iOS Device}
 \institute{PR204/ED217 Escape}
