--- a/rsoc-vmchecker/slides.tex
+++ b/rsoc-vmchecker/slides.tex
@@ -1,19 +1,4 @@
-\documentclass{beamer}
-
-\usepackage[utf8x]{inputenc}
-\usepackage[romanian]{babel}
-\usepackage{color}
-\usepackage{alltt}
-
-%\usepackage{code/highlight}
-
-\usepackage{hyperref}
-\usepackage{verbatim}
-
-\mode<presentation>
-{ \usetheme{Berlin} }
-
-\PrerenderUnicode{aâîțșĂÎÂȚȘ}
+\documentclass{simple}
 
 \title[vmchecker]{Administrarea prin interfață web a vmchecker}
 \institute{ROSEdu Summer of Code}
