--- a/stiinta-si-arta/slides.tex
+++ b/stiinta-si-arta/slides.tex
@@ -1,24 +1,4 @@
-\documentclass{beamer}
-
-% Romanian Language support
-\usepackage{ucs}
-\usepackage{alltt}
-\usepackage[utf8x]{inputenc}
-\PrerenderUnicode{aâîțșĂÎÂȚȘ}
-\usepackage[english,romanian]{babel}
-
-\usepackage{hyperref}   % use \url{http://$URL} or \href{http://$URL}{Name}
-\usepackage{verbatim}
-\usepackage{underscore} % underscores need not be escaped
-\usepackage{booktabs}   % nice looking tables
-\usepackage{array}      % column size options in tables
-\usepackage[normalem]{ulem}       % for striketrough text
-
-\mode<presentation>
-%{ \usetheme{Berlin} }
-
-% Disable useless navigation symbols.
-\setbeamertemplate{navigation symbols}{}
+\documentclass{simple}
 
 \title[Știință și artă]{Știință și artă}
 \institute{CDL, ROSEdu}
