--- a/task-management/slides.tex
+++ b/task-management/slides.tex
@@ -1,32 +1,4 @@
-\documentclass{beamer}
-
-\usepackage[utf8x]{inputenc}		% diacritice
-\usepackage[romanian]{babel}
-\usepackage{color}			% highlight
-\usepackage{alltt}			% highlight
-
-% highlight; comment this out in case you don't input code source files
-%\usepackage{code/highlight}		% highlight
-
-\usepackage{hyperref}			% folosiți \url{http://...}
-					% sau \href{http://...}{Nume Link}
-\usepackage{verbatim}
-
-% Show contents at every section beginning. Ripped off from manual.
-\AtBeginSection[] % Do nothing for \section*
-{
-  \begin{frame}<beamer>
-    \frametitle{Outline}
-  \tableofcontents[currentsection]
-    \end{frame}
-}
-
-
-\mode<presentation>
-{ \usetheme{Berlin} }
-
-% Încărcăm simbolurilor Unicode românești în titlu și primele pagini
-\PrerenderUnicode{aâîțșĂÎÂȚȘ}
+\documentclass{simple}
 
 \title[Task Management]{Task Management for the Daily Workaholic}
 \institute{Întâlnirile lunare RLUG -- August 2011}
