reversing-is-fun: Reorder "portfolio" slide

--- a/reversing-is-fun/slides.tex
+++ b/reversing-is-fun/slides.tex
@@ -244,6 +244,18 @@ razvan.deaconescu@cs.pub.ro}
 \end{frame}
 
 \begin{frame}{My Story}
+  \begin{itemize}
+    \pause \item CTF security contests (Capture the Flag)
+    \pause \item master classes on security (open content)
+      \begin{itemize}
+        \pause \item \url{https://ocw.cs.pub.ro/courses/cns}
+        \pause \item \url{http://elf.cs.pub.ro/sis/}
+      \end{itemize}
+    \pause \item security summer school (open content): \url{https://security.cs.pub.ro/summer-school/wiki/}
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{My Story in iOS Reversing}
   \begin{figure}
     \centering
     \includegraphics[width=0.8\textwidth]{img/ios-sandboxing}
@@ -318,18 +330,6 @@ razvan.deaconescu@cs.pub.ro}
   \end{itemize}
 \end{frame}
 
-\begin{frame}{Some other things}
-  \begin{itemize}
-    \pause \item CTF security contests (Capture the Flag)
-    \pause \item master classes on security (open content)
-      \begin{itemize}
-        \pause \item \url{https://ocw.cs.pub.ro/courses/cns}
-        \pause \item \url{http://elf.cs.pub.ro/sis/}
-      \end{itemize}
-    \pause \item security summer school (open content): \url{https://security.cs.pub.ro/summer-school/wiki/}
-  \end{itemize}
-\end{frame}
-
 \begin{frame}{Yes but \ldots}
   \centering
   \pause \ldots{} it seems daunting \\
@@ -339,7 +339,7 @@ razvan.deaconescu@cs.pub.ro}
 \begin{frame}{However \ldots}
   \centering
   \pause it will be fun \\
-  \pause you will improve: patience, perseverence, lateral thinking, problem solving \\
+  \pause you will improve: patience, perseverance, lateral thinking, problem solving \\
   \pause you are part of a community
 \end{frame}
 
